Updated: TV page to have Poster View for Series Updated: Item page design for Seasons and Episode List Updated: TabbedPageLibrary component to omit media info if we are dealing with items such as a series Fixed: Home `.tile` spacing to line up with media items Additional: Added `self.getRouteUrl` from default theme to plugin.js

--- a/home/homevert.css
+++ b/home/homevert.css
@@ -94,8 +94,8 @@ div[data-type="home"] {
   box-sizing: border-box;
   width: calc(26vh + 4px);
   height: 16vh;
-  margin: 6px;
-  margin-right: 3vw;
+  margin: 6px.5em;
+  margin-right: 4vw;
   padding: 0.8vw;
   border: none;
   background-color: rgba(0, 0, 0, 0.8);
